--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <div id="div3">
                     <p>Lookup the definition of a word (e.g. ajax, html, bar, php, javascript or css).</p>
                     <input type="text" name= "definition" id="searchbox" />
-                    <button type="button" id= "searchs"> Search  </button>
+                    <button type="submit" id= "searchs"> Search  </button> 
+                    <button type="submit" id="findall">Get All Definition</button>
                     <div>
                         <h3>RESULTS</h3>
                         <p id="p1"></p>
